# illforce

./: .gitignore  .travis.yml  ChangeLog.md  ILLFORCE.hs  LICENSE  README.md  SCPECG.hs  animate.hs  bitbucket-pipelines.yml  ill2txt.hs  illforce.cabal  illforce.hs  playanimation  playecg.hs  playvfb.sh  scp2txt.hs  scpecg.cabal  scpecg.hs  scpprint.hs  xvfb-encode.sh  xvfb-play.sh  xvfb-record.sh
.github/workflows/: haskell.yml
Data/Digest/: CRC.hs  CRC16CCITT.hs
SCPECG/: Core.hs  Hufftabs.hs  Leads.hs  Metadata.hs  Pointer.hs  QRSLocs.hs  RefBeats.hs  Signal.hs  Types.hs  Vendor.hs
debian/: changelog  control  copyright  illforce.install  rules  watch
