-- The name of the package.
name:                illforce

-- The package version.  See the Haskell package versioning policy (PVP)
-- for standards guiding when and how versions should be incremented.
-- https://wiki.haskell.org/Package_versioning_policy
-- PVP summary:      +-+------- breaking API changes
--                   | | +----- non-breaking API additions
--                   | | | +--- code changes with no API change
version:             0.1.0.0

-- A short (one-line) description of the package.
synopsis:            Parser/convertor for SCP ECG file format

-- A longer description of the package.
description:         Library to parse SCP-ECG format, and (in the future)
                     convert the data to other formats. May be especially
                     useful for files from Heal Force one-lead ECG recorders

-- URL for the project homepage or repository.
homepage:            https://github.com/thewyrdguy/illforce/

-- The license under which the package is released.
license:             BSD3

-- The file containing the license text.
license-file:        LICENSE

-- The package author(s).
author:              Peter Wyrd

-- An email address to which users can send suggestions, bug reports, and
-- patches.
maintainer:          thewyrdguy@gmail.com

-- A copyright notice.
copyright:           2019, Peter Wyrd

category:            Codec

build-type:          Simple

-- Extra files to be distributed with the package, such as examples or a
-- README.
extra-source-files:  ChangeLog.md

-- Constraint on the version of Cabal needed to build this package.
cabal-version:       >=1.10


library
  -- Modules exported by the library.
  exposed-modules:     SCPECG, SCPECG.Types, SCPECG.Vendor, SCPECG.Pointer,
                       SCPECG.Metadata, SCPECG.Hufftabs, SCPECG.Leads,
                       SCPECG.QRSLocs, SCPECG.RefBeats, SCPECG.Signal

  -- Modules included in this library but not exported.
  other-modules:       Data.Digest.CRC, SCPECG.Core

  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:

  -- Other library packages from which modules are imported.
  build-depends:       base >=4.9 && <5.0
                     , bytestring >=0.10 && <1.0
                     , binary >=0.8 && <1.0
                     , time >=1.6 && <2.0

  -- Directories containing source files.
  -- hs-source-dirs:

  -- Base language which the package is written in.
  default-language:    Haskell2010


executable scpecg
  -- .hs or .lhs file containing the Main module.
  main-is:             scpecg.hs

  -- Modules included in this executable, other than Main.
  -- other-modules:

  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:

  -- Other library packages from which modules are imported.
  build-depends:       base >=4.9 && <5.0
                     , bytestring >=0.10 && <1.0
                     , binary >=0.8 && <1.0
                     , time >=1.6 && <2.0

  -- Directories containing source files.
  -- hs-source-dirs:

  -- Base language which the package is written in.
  default-language:    Haskell2010

